wording and summary update

--- a/Value Averaging Analysis.ipynb
+++ b/Value Averaging Analysis.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "## Dollar Cost Averaging (DCA) vs Value Averaging (VA) Investing\n",
     "\n",
-    "The idea behind this analysis is to compare the results together with strengths and weaknesses of two popular investing methods - Dollar Cost Averaging and Value Averaging. To do that I will use simple yet powerful set of analytical tools - Python programming language with Pandas module to manipulate the data and Matplotlib module to visualize it. \n",
+    "The idea behind this analysis is to compare the results including strengths and weaknesses of two popular investing methods - Dollar Cost Averaging and Value Averaging. To do that I will use simple yet powerful set of analytical tools - Python programming language with Pandas module for data manipulation and Matplotlib module for visualizations. \n",
     "\n",
-    "Before I start let me first briefly explain both of the concepts by quoting investopedia and displaying table examples:\n",
+    "First let me briefly explain both concepts by quoting investopedia and displaying table examples:\n",
     "\n",
-    "**[Dollar Costs Averaging](https://www.investopedia.com/terms/d/dollarcostaveraging.asp)** - \n",
+    "**[Dollar Cost Averaging](https://www.investopedia.com/terms/d/dollarcostaveraging.asp)** - \n",
     " \"is an investment technique of buying a fixed dollar amount of a particular investment on a regular schedule, regardless of the share price. The investor purchases more shares when prices are low and fewer shares when prices are high.\"\n",
     " \n",
     " An example of **3 period DCA with contribution of \\$1000 per period:**\n",
@@ -28,12 +28,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis Assumptions:\n",
-    "* 6 years or 24 quarters worth of data\n",
-    "* 3 case studies (uptrend, downtrend and horizontal) to examine results in each of the market conditions\n",
+    "### Analysis assumptions:\n",
+    "* 6 years or 24 quarters worth of data (from 1Q12 till 4Q17)\n",
+    "* 3 case studies (uptrend, downtrend and horizontal) to examine results in each market condition\n",
     "* Investment starts on last day of 1Q 2012 with \\$10,000 initial contribution \n",
     "* Following the initial investment contributions of \\$2,500 are made quarterly on last quarter day for DCA and similarly target value increase by $2,500 quarterly for VA\n",
-    "* To keep it simple transaction fees and commissions are ignored"
+    "* Transaction fees and commissions are ignored for simplicity reasons"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "metadata": {},
    "source": [
     "### Xirr to find outperforming strategy:\n",
-    "XIRR is a function for calculatation of internal rate of return (annualized return) for cash flows occurring at irregular intervals. Xirr is commonly used in spreadsheets to analyse investment performance across times series. Sadly no major python data analysis module (numpy, pandas etc.) has xirr function  included. However github user **peliot created module with python implementations of Microsoft Excel's XNPV and XIRR functions**. You can find it [here](https://github.com/peliot/XIRR-and-XNPV) and while visiting peliot's git don't forget to give him a well deserved star!\n",
+    "XIRR is a function used to calculatate internal rate of return (annualized return) for cash flows occurring at irregular intervals. Xirr is commonly used in spreadsheets to analyse investment performance across times series. Sadly no major python data analysis module (numpy, pandas etc.) has xirr function  included. However github user **peliot has created a module with python implementations of Microsoft Excel's XNPV and XIRR functions**. You can find it [here](https://github.com/peliot/XIRR-and-XNPV) and while visiting peliot's git don't forget to give him a well deserved star!\n",
     "\n",
     "\n",
     " In this study negative cash flows (investments) are occuring on a quarterly basis while positive cash flow (divestment) occurs on the last day of 4Q 2017."
@@ -105,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def quotes_df(ticker, start, end):\n",
@@ -140,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -170,9 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def dca_df_creator(df, **quess_val):\n",
@@ -199,9 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -590,9 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def va_df_creator(df, **quess_val):   \n",
@@ -638,9 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1029,9 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def comparison_graphs(df_dca, df_va):\n",
@@ -1057,9 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1197,9 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def summary_table(df_dca, df_va, xirr_dca, xirr_va, dca_col, va_col):\n",
@@ -1218,9 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1313,8 +1293,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bull market delivered solid results for both methods.\n",
-    "<br>**Dollar Cost Averaging** saw xirr of **11.0%** while **Value Averaging 11.2%.**\n",
+    "### Bull market delivered solid results for both methods\n",
+    "<br>**Dollar Cost Averaging** saw xirr of **12.1%** while **Value Averaging 12.2%.**\n",
     "\n",
     "* **DCA's total investment of \\$67,500**  (which was known in advance) **returned final value of \\~$99,300.**\n",
     "* **VA's final value of \\$67,500** (which was known in advance) was achieved with **total investment of ~\\$41,900.**\n",
@@ -1327,7 +1307,7 @@
    "metadata": {},
    "source": [
     "# Study 2: Downtrend\n",
-    "As an example of a bear market I will use **Deutsche Bank equity**. The company had it's share of difficulties and financial issues which brought price down. <br>At the beggining of 2012 one share was priced at \\$36.31 and at the end of 2017 at \\$19.03 which translates into **6 year return of -48%**. Prices doesn't include dividends which were distributed during analize period and would increase total return. However even if accounted for that downtrend would still be clear. "
+    "As an example of a bear market I will use **Deutsche Bank equity**. The company had its share of difficulties and financial issues which brought the price down. <br>At the beggining of 2012 one share was priced at \\$36.31 and at the end of 2017 at \\$19.03 which translates into **6 year return of -48%**. Prices do not include dividends which were distributed during the period under analysis and would increase total return. However, even if accounted for that downtrend would still be clear. "
    ]
   },
   {
@@ -1351,9 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1381,9 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1772,9 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2163,9 +2137,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2302,9 +2274,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2397,13 +2367,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### As expected bear market brought losses and negative returns for both methods.\n",
+    "### As expected bear market brought losses and negative returns for both methods\n",
     "<br>**Dollar Cost Averaging** saw xirr of **-10.4%** while **Value Averaging -6.9%**\n",
     "\n",
-    "* **DCA's total investment of \\$67,500**  (which was known in advance) ended up with **loss of \\~$29,000.**\n",
+    "* **DCA's total investment of \\$67,500**  (which was known in advance) ended up with **loss of \\~$19,000.**\n",
     "* **VA's final value of \\$67,500** (which was known in advance) was achieved with total investment of ~\\$85,100 and **delivered ~\\$17,600 loss**\n",
     "\n",
-    "<br> Value Averaging was more successful method in this example as it's annualized return was significantly higher due to lower average share price bought. This is related to more aggresive buying when prices are the lowest. However VA has material limitation as it is unknown in advance how much capital will be needed to inject and investor may face the risk of running out of money to invest in trending down asset. Also in the worst case scenario when asset price will be worth nothing or close to nothing (e.g in case of bankrupcy or huge shares issuance which would dilute capital) than VA will become a losing stategy  with significantly higher capital loss.\n"
+    "<br> Value Averaging was more successful method in this example as its annualized return was significantly higher due to lower average share price bought. This is related to more aggresive buying when prices are the lowest. However VA has material limitation as it is unknown in advance how much capital will be needed to inject and investor may face the risk of running out of money to invest in trending down asset. Also in the worst case scenario when asset price is worth nothing or close to nothing (e.g in case of bankrupcy or huge shares issuance which would dilute capital) than VA will become a losing stategy  with significantly higher capital loss.\n"
    ]
   },
   {
@@ -2411,8 +2381,8 @@
    "metadata": {},
    "source": [
     "# Study 3: Horizontal trend\n",
-    "As an example of horizontal trend I will use **Randgold Resources** a gold mining company. <br>\n",
-    "As visible in the plot below it's hard to point out the prevailing bull or bear market in analyse period as upward movements were followed by price falls. First trading season in 2012 ended with a price of \\$103.64 while last trading day in 2017 closed with a price of \\$98.79 which means a **6 year return of -5%**."
+    "As an example of horizontal trend I will use **Randgold Resources**, a gold mining company. <br>\n",
+    "As visible in the plot below it is hard to point out the prevailing bull or bear market in analyse period as upward movements were followed by price falls. First trading season in 2012 ended with a price of \\$103.64 while last trading day in 2017 closed with a price of \\$98.79 which means a **6 year return of -5%**."
    ]
   },
   {
@@ -2436,9 +2406,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2466,9 +2434,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2857,9 +2823,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3248,9 +3212,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3387,9 +3349,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3482,13 +3442,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Horizontal trend delivered positive results for both methods.\n",
+    "### Horizontal trend delivered positive results for both methods\n",
     "<br>**Dollar Cost Averaging** saw xirr of **7.1%** while **Value Averaging 11.5%**\n",
     "\n",
     "* **DCA's total investment of \\$67,500**  (which was known in advance) ended up with **total value of \\~$84,900.**\n",
     "* **VA's final value of \\$67,500** (which was known in advance) was achieved with total investment of just **~\\$40,600**\n",
     "\n",
-    "<br> Value Averaging was a clear winner in the above case. It acheived 55% higher annualized return, ~\\$9,500 higher profit and required ~\\$26,900 less capital. Since assets value are mean reversing it is greatly beneficial to buy more subdued stocks and bring down average buy price which VA is all about."
+    "<br> Value Averaging was a clear winner in the above case. It acheived 55% higher annualized return, ~\\$9,500 higher profit and required ~\\$26,900 less capital. Since assets values are mean reversing it is greatly beneficial to buy more subdued stocks and bring down average buy price which VA is all about."
    ]
   },
   {
@@ -3501,9 +3461,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3620,7 +3578,7 @@
    },
    "source": [
     "### Dollar Cost Averaging conclusions:\n",
-    "* **Less risky** as the worst case scenario (loss of all invested capital) is not uncertain as contributions are know in advance\n",
+    "* **Less risky** as the worst case scenario (loss of all invested capital) is not uncertain because contributions are know in advance\n",
     "* **Lower annualized returns** as relatively lower amount of shares is bought during the periods of depressed prices\n",
     "* **Uncertain final value of investment**\n",
     "* Can produce **higher profits in bull market** as more capital is invested"
@@ -3641,7 +3599,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3655,7 +3613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
